[gd_scene load_steps=5 format=2]

[ext_resource path="res://edunline.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scenes/title/levelselect.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 50
font_data = ExtResource( 1 )

[node name="levelselect" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -8.0
margin_top = -8.0
margin_right = 1032.0
margin_bottom = 608.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="title2" type="RichTextLabel" parent="."]
visible = false
margin_left = 320.0
margin_top = 136.0
margin_right = 712.0
margin_bottom = 192.0
custom_fonts/mono_font = SubResource( 1 )
custom_fonts/normal_font = SubResource( 2 )
custom_colors/default_color = Color( 0, 0.952941, 0, 1 )
text = "USCSS Messina"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="title" type="RichTextLabel" parent="."]
visible = false
margin_left = 64.0
margin_top = 136.0
margin_right = 968.0
margin_bottom = 192.0
custom_fonts/mono_font = SubResource( 1 )
custom_fonts/normal_font = SubResource( 2 )
custom_colors/default_color = Color( 0, 0.952941, 0, 1 )
text = "Ensure Live Collection of Sample"

[node name="secondary" type="RichTextLabel" parent="."]
visible = false
margin_left = 64.0
margin_top = 200.0
margin_right = 1016.0
margin_bottom = 256.0
custom_fonts/mono_font = SubResource( 1 )
custom_fonts/normal_font = SubResource( 2 )
custom_colors/default_color = Color( 0, 0.952941, 0, 1 )
text = "all other considerations secondary"

[node name="priority" type="RichTextLabel" parent="."]
visible = false
margin_left = 64.0
margin_top = 72.0
margin_right = 840.0
margin_bottom = 128.0
custom_fonts/mono_font = SubResource( 1 )
custom_fonts/normal_font = SubResource( 2 )
custom_colors/default_color = Color( 0, 0.952941, 0, 1 )
text = "Priority one :"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="names" type="RichTextLabel" parent="."]
visible = false
margin_left = 64.0
margin_top = 72.0
margin_right = 832.0
margin_bottom = 576.0
custom_fonts/mono_font = SubResource( 1 )
custom_fonts/normal_font = SubResource( 2 )
custom_colors/default_color = Color( 0, 0.952941, 0, 1 )
text = "Code: Max Boyson


Music: Cullen Burke


Art: Hannah Spirko"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="credits" type="RichTextLabel" parent="."]
visible = false
margin_left = 360.0
margin_top = 392.0
margin_right = 664.0
margin_bottom = 448.0
custom_fonts/mono_font = SubResource( 1 )
custom_fonts/normal_font = SubResource( 2 )
custom_colors/default_color = Color( 0, 0.952941, 0, 1 )
bbcode_enabled = true
bbcode_text = "[url={\"data\"=\"play\"}][ credits ][/url]"
meta_underlined = false
text = "[ credits ]"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="back" type="RichTextLabel" parent="."]
visible = false
margin_left = 64.0
margin_top = 512.0
margin_right = 344.0
margin_bottom = 568.0
custom_fonts/mono_font = SubResource( 1 )
custom_fonts/normal_font = SubResource( 2 )
custom_colors/default_color = Color( 0, 0.952941, 0, 1 )
bbcode_enabled = true
bbcode_text = "[url={\"data\"=\"play\"}][ return ][/url]"
meta_underlined = false
text = "[ return ]"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="acknowledge" type="RichTextLabel" parent="."]
visible = false
margin_left = 576.0
margin_top = 520.0
margin_right = 1016.0
margin_bottom = 576.0
custom_fonts/mono_font = SubResource( 1 )
custom_fonts/normal_font = SubResource( 2 )
custom_colors/default_color = Color( 0, 0.952941, 0, 1 )
bbcode_enabled = true
bbcode_text = "[url={\"data\"=\"play\"}][ acknowledge ][/url]"
meta_underlined = false
text = "[ acknowledge ]"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="play" type="RichTextLabel" parent="."]
visible = false
margin_left = 400.0
margin_top = 320.0
margin_right = 632.0
margin_bottom = 376.0
custom_fonts/mono_font = SubResource( 1 )
custom_fonts/normal_font = SubResource( 2 )
custom_colors/default_color = Color( 0, 0.952941, 0, 1 )
bbcode_enabled = true
bbcode_text = "[url={\"data\"=\"play\"}][ play ][/url]"
meta_underlined = false
text = "[ play ]"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="level1" type="RichTextLabel" parent="."]
margin_left = 128.0
margin_top = 128.0
margin_right = 472.0
margin_bottom = 184.0
custom_fonts/mono_font = SubResource( 1 )
custom_fonts/normal_font = SubResource( 2 )
custom_colors/default_color = Color( 0, 0.952941, 0, 1 )
bbcode_enabled = true
bbcode_text = "[url={\"data\"=\"play\"}][ level 1 ][/url]"
meta_underlined = false
text = "[ level 1 ]"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="level2" type="RichTextLabel" parent="."]
margin_left = 128.0
margin_top = 192.0
margin_right = 464.0
margin_bottom = 248.0
custom_fonts/mono_font = SubResource( 1 )
custom_fonts/normal_font = SubResource( 2 )
custom_colors/default_color = Color( 0, 0.952941, 0, 1 )
bbcode_enabled = true
bbcode_text = "[url={\"data\"=\"play\"}][ level 2 ][/url]"
meta_underlined = false
text = "[ level 2 ]"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="level3" type="RichTextLabel" parent="."]
margin_left = 128.0
margin_top = 256.0
margin_right = 448.0
margin_bottom = 312.0
custom_fonts/mono_font = SubResource( 1 )
custom_fonts/normal_font = SubResource( 2 )
custom_colors/default_color = Color( 0, 0.952941, 0, 1 )
bbcode_enabled = true
bbcode_text = "[url={\"data\"=\"play\"}][ level 3 ][/url]"
meta_underlined = false
text = "[ level 3 ]"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="level4" type="RichTextLabel" parent="."]
margin_left = 128.0
margin_top = 320.0
margin_right = 448.0
margin_bottom = 376.0
custom_fonts/mono_font = SubResource( 1 )
custom_fonts/normal_font = SubResource( 2 )
custom_colors/default_color = Color( 0, 0.952941, 0, 1 )
bbcode_enabled = true
bbcode_text = "[url={\"data\"=\"play\"}][ level 4 ][/url]"
meta_underlined = false
text = "[ level 4 ]"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="meta_clicked" from="credits" to="." method="_on_credits_meta_clicked"]
[connection signal="meta_clicked" from="back" to="." method="_on_back_meta_clicked"]
[connection signal="meta_clicked" from="acknowledge" to="." method="_on_acknowledge_meta_clicked"]
[connection signal="meta_clicked" from="play" to="." method="_on_play_meta_clicked"]
[connection signal="meta_clicked" from="level1" to="." method="_on_level1_meta_clicked"]
[connection signal="meta_clicked" from="level2" to="." method="_on_level2_meta_clicked"]
[connection signal="meta_clicked" from="level3" to="." method="_on_level3_meta_clicked"]
[connection signal="meta_clicked" from="level4" to="." method="_on_level4_meta_clicked"]
